--- a/src/styles.css
+++ b/src/styles.css
@@ -4,10 +4,18 @@
     font-family: "Audiowide", sans-serif;
 }
 
-body {
+#wallpaper {
     background-image: url(https://cdn.pixabay.com/photo/2014/07/10/11/15/skateboarder-388977_960_720.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 90px;
+}
+
+#about{
+    background-image: url(src/images/skateshop.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
