--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,16 @@
     font-family: "Audiowide", sans-serif;
 }
 
-#wallpaper {
+#wallpaperLogin {
     background-image: url(https://cdn.pixabay.com/photo/2014/07/10/11/15/skateboarder-388977_960_720.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 90px;
+}
+
+#wallpaperReg {
+    background-image: url(https://img.freepik.com/premium-vector/skateboard-cartoon-character-seamless-pattern-pink-background_618978-2137.jpg?w=2000);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -19,3 +27,4 @@
     background-size: cover;
 
 }
+
